# cis-3030

./: .gitignore  README.md
Haskell/VTCLibrary/: .project  VTCLibrary.cabal
Haskell/VTCLibrary/check/: Check.hs
Haskell/VTCLibrary/check/VTC/: ListTest.hs
Haskell/VTCLibrary/src/VTC/: Numbers.hs
OCaml/: OCamlCrash.odt  OMakefile  afile.txt  calendar.ml  cards.ml  cards.mli  count.ml  date.ml  date.mli  date_test.ml  fib.ml  filecheck.ml  filter.ml  homework05-solution.ml  homework05.html  main.ml  point.ml  poker.ml  poker.mli  primes.ml  sort_lists.ml  toy.mll  tree.ml  tree.mli  util.ml
OCaml/Slides/: Functional-Programming.odp  OCaml-Basics.odp  Pattern-Matching.odp  Polymorphism.odp  Record-and-Variant-Types.odp  Using-Recursion.odp
Python/: PythonCrash.odt  a.py  b.py  bookmarker.py  bounded.py  date.py  datebook.py  ftoc.py  homework06.html  hw06_1.py  hw06_2.py  hw06_3.py  mysort.py  prime.py  print_files.py  python-check.htm  python-security.txt  type_error.py
Python/InterfacingC/: build_embed  embed.c  setup.py  spammodule.c
Python/Stackless/: Stackless-Basics.ppt  sleeping.py  sleeping2.py  stacklesssocket.py  thread.py
Scala/Hello/src/edu/vtc/cis3030/: ArithmeticParser.scala  BinaryString.scala  BookmarkManager.scala  DecodeURLs.scala  GenericDemo.scala  Hello.scala  ListSamples.scala  Rational1.scala  Rational2.scala  Tree.scala  TreeGeneric.scala
Scala/Hw01/src/edu/vtc/cis3030/hw01/: Main.scala
VTCLibrary/: VTCLibrary.cabal
VTCLibrary/check/: Check.hs
VTCLibrary/check/VTC/: DFATest.hs  ListTest.hs  NumbersTest.hs  PNGTest.hs
VTCLibrary/src/VTC/: DFA.hs  List.hs  Numbers.hs  PNG.hs  Tree.hs
